# upnpl

./: .gitignore  CMakeLists.txt  M.mat  M_sym.txt  M_sym_N1.txt  M_sym_N3.txt  M_sym_N4.txt  README.md  construct.m  construct_N1_d2.asv  construct_N1_d2.m  construct_N2.m  cppcode.py  cppcode_d2.py  eval_euroc.py  findM.py  nonzero_elements_output.txt  nonzero_elements_output_N3.txt  nonzero_elements_output_N4.txt  output.sh  run_cvx.sh  run_kitti.sh  run_sim.sh
dataset/: cpnp.txt  cvxpnpl.txt  dls.txt  epnp.txt  epnpl.txt  epnplu.txt  epnpu.txt  gmlpnp.txt  upnp.txt  upnpl.txt
include/: UPnPL.h  constructM.h  constructM_N2.h  constructM_N2_d2.h  constructM_N3.h  constructM_N4.h  generate.h  rapidcsv.h  utils.h
line/: cvxpnpl.txt  epnpl.txt  epnplu.txt  upnpl_1.txt  upnpl_2.txt  upnpl_4.txt
point/: cpnp.txt  dls.txt  epnp.txt  epnpu.txt  gmlpnp.txt  upnp.txt  upnpl_1.txt  upnpl_2.txt  upnpl_4.txt
script/: CMakeLists.txt  M_sym_N1.txt  M_sym_N2.txt  M_sym_N2_d2.txt  M_sym_N3.txt  construct_N1.m  construct_N2_d2.m  construct_N3.m  construct_N3_d2.m  cppcode.py  cppcode_d2.py  findM.py  nonzero_elements_output_N2.txt  nonzero_elements_output_N2_d2.txt  nonzero_elements_output_N3.txt  run_cvxpnpl.py
simulated/0_50_10/: epnp_simulated_trajectory.txt  epnplgn.txt  gt_simulated_trajectory.txt  opnpl.txt  upnp_simulated_trajectory.txt  upnpl_1cam_simulated_trajectory.txt  upnpl_2cam_simulated_trajectory.txt  upnpl_3cam_simulated_trajectory.txt  (+1 more)
src/: UPnPL.cc  euroc_test.cc  gpnp_test.cc  kitti_test.cc  sim1.cc  sim_test.cc  tum_test.cc  vgg_real_test.cc
(+20018 files in other folders)
